***********************************
CHANGES IN VERSION 1.11.1

BUG FIXES

   o Bug in import.my5C function


***********************************
CHANGES IN VERSION 1.9.6

BUG FIXES

   o Bug in import.my5C function


***********************************
CHANGES IN VERSION 1.9.5

NEW FEATURES

   o The normLGF function can now be applied both on intra and inter-chromosomal maps

SIGNIFICANT USER-VISIBLE CHANGES

   o Access the contact map is now ALWAYS performed using chromosomes' name such as ygi/xgi, i.e. rownames/colnames of contact maps

   o Update of the setGenomicFeatures method and speed improvment

BUG FIXES

   o Update of isComplete method

   o Update of import functions

***********************************
CHANGES IN VERSION 1.9.4

NEW FEATURES

   o ICE normalization can now be applied on both HTCexp and HTClist objects

   o New methods for HTClist-class : isComplete, isPairwise, forcePairwise, forceSymmetric

   o New methods for HTCexp-class : forceSymmetric

   o New methods (not exported) for HTClist-class : getCombinedIntervals, getCombinedContacts

SIGNIFICANT USER-VISIBLE CHANGES

   o Update of the binningC method. Improvement of speed and memory usage. The binningC function can now be applied on Hi-C data (or any already binned data). The goal is to move from a very high resolution map (for instance 40kb) to a lower resolution ( for instance 1Mb) by aggregationg and summing the bins.

   o Update of the importC/exportC functions which are now based on a new format (list with interactor1/interactor2/count + BED files). This format is recommanded to store sparse data because only the non null values are exported/imported.

   o Update of the import.my5C/export.m5C functions. Only the matrix format is now supported. For the list format, see the importC/exportC functions.

BUG FIXES

   o Bug fixed in divide method

***********************************
CHANGES IN VERSION 1.9.3

NEW FEATURES

   o getRestrictionFragmentsPerChromosome
